Add OTA updates and fix effect curve live tracking

--- a/app.json
+++ b/app.json
@@ -35,6 +35,14 @@
     "experiments": {
       "typedRoutes": true
     },
+    "updates": {
+      "url": "https://u.expo.dev/71ca38eb-cff2-4072-8027-844fc701b897",
+      "fallbackToCacheTimeout": 0,
+      "checkAutomatically": "ON_LOAD"
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
     "extra": {
       "router": {},
       "eas": {
