--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-navigation/native": "^7.1.8",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.2",
     "@react-native-community/slider": "4.5.6",
+    "@react-navigation/native": "^7.1.8",
     "d3-scale": "4.0.2",
     "d3-shape": "3.2.0",
     "expo": "~54.0.32",
-    "expo-clipboard": "~8.0.6",
     "expo-blur": "~15.0.5",
+    "expo-clipboard": "~8.0.6",
     "expo-constants": "~18.0.13",
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.5",
@@ -25,15 +25,16 @@
     "expo-router": "~6.0.22",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "^29.0.16",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-worklets": "0.5.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.14.0",
     "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
     "zustand": "5.0.3"
   },
   "devDependencies": {
